--- a/20231005194145-algebraic_models_for_accounting_systems.org
+++ b/20231005194145-algebraic_models_for_accounting_systems.org
@@ -1,7 +1,12 @@
 :PROPERTIES:
 :ID:       9a03d556-ded4-4096-9a8c-c2147dee70a5
 :END:
-#+title: Algebraic Models For Accounting Systems
+#+TITLE: Algebraic Models for Accounting Systems
+#+STARTUP: latexpreview
+#+ROAM_TAGS: "accounting" "algebra"
+#+LATEX_HEADER: usepackage{arev}
+
+Algebraic Models for Accouting Systems
 
 * Approaches to Accounting Theory
 ** Algebraic concepts employed
@@ -19,8 +24,142 @@
     system are the balance vectors, the inputs are the transactions and the
     outputs are the new balance vectors.
 + Monoid
-  * 
 
 * Balance Vectors
 ** The values of an account
+
+Let there be given a set R together with two binary operations on R called
+addition and multiplication, denoted in the usual way, such that the following
+rules hold for all elements a, b, c of R:
+
+\begin{align*}
+(a + b) + c &= a + (b + c) \tag{1}\\
+a + b &= b + a \tag{2}\\
+\exists 0 \in R, \forall a \in R, a + 0_r &= a \tag{3}\\
+\forall a \in R, \exists (-a) \in R, a + (-a) &= 0 \tag{4}\\
+a \times (b \times c) &= (a \times b) \times c \tag{5}\\
+a \times b &= b \times a \tag{6}\\
+a \times (b + c) &= a \times b + a \times c \tag{7}\\
+\exists 1 \in R, \forall a \in R, a \times 1 &= a \tag{8}
+\end{align*}
+
+The first four of these requirements assert that *R* is an algebraic structure
+called an *abelian group*. With the additional properties (5) through (8) R
+becomes a *commutative ring* with identity.
+
+A commutative ring with identity *R* is said to be *linearly ordered* if there is a
+non-empty subset *P* of *R* not containing 0, called the set of positive elements,
+such that the following conditions are satisfied:
+
+\begin{align*}
+a,b \in P \implies a + b \in P &\wedge a \times b \in P \tag{9}\\
+\forall a \in R, (a \in P) \lor (a = 0) &\lor (-a \in P) \tag{10}\\
+\end{align*}
+
+The actual concept of a linear order arises when one defines a < b to mean that
+b − a \in P. The negative elements of R are the elements of the set R \ (P ∪
+{0}). On the basis of (9) and (10) it can be shown that the following holds:
+
+\begin{align*}
+\forall a,b \in R, (a < b) \lor (a = b) &\lor (a > b) \tag{11}\\
+a,b \in R \wedge a \times b = 0 \implies a = 0 &\lor b = 0 \tag{12}\\
+\end{align*}
+
+** The State of an Accounting System
+
+Let *R* be an *ordered domain*, which will be the universal set for all account
+values, and let n be a positive integer, which will be the number of accounts in
+the accounting system. The state of the system at any instant can be described
+by listing the values of the accounts, which are assumed to be in some agreed
+order, in the form of an n-column vector over *R*.
+
+\begin{equation*}
+V = \begin{bmatrix}
+v_1 \\ 
+v_2 \\ 
+\vdots \\ 
+v_n \\ 
+\end{bmatrix}
+\end{equation*}
+
+Thus v_i \in R is the value of the ith account. The set of all n-column vectors over R is denoted by R^n. 
+
+Of particular importance is the zero vector:
+
+\begin{equation*}
+0 = \begin{bmatrix}
+0 \\ 
+0 \\ 
+\vdots \\ 
+0 \\ 
+\end{bmatrix}
+\end{equation*}
+
+\begin{equation*}
+u + v = \begin{bmatrix}
+u_1 + v_1 \\ 
+u_2 + v_2 \\ 
+\vdots \\ 
+u_n + v_n \\ 
+\end{bmatrix}
+\end{equation*}
+
+
+\begin{equation*}
+r \times v = \begin{bmatrix}
+r \times v_1 \\ 
+r \times v_2 \\ 
+\vdots \\ 
+r \times v_n \\ 
+\end{bmatrix}
+\end{equation*}
+
+Let $u, v, w \in R^n$ and $r, s \in R$:
+
+\begin{align*}
+(u + v) + w &= u + (v + w) \tag{1}\\
+u + v &= v + u \tag{2}\\
+v + 0 &= v \tag{3}\\
+v + (-v) &= 0 \tag{4}\\
+r \times (u + v) &= r \times u + r \times v \tag{5}\\
+(r + s) \times u &= r \times u + s \times u \tag{6}\\
+(r \times s) \times v &= r \times (s \times v) \tag{7}\\
+1_R \times v &= v \tag{8}
+\end{align*}
+
+*** The free R-module R^n
+
+It turns out that R^n is a particular type of R-module called a free R-module. To
+see what is special about it, consider the so-called elementary column vectors
+e(1), e(2), ... , e(n) where the ith entry of e(i) is 1 = 1_R and all other
+entries are 0. Thus:
+
+\begin{equation*}
+e(1) = \begin{bmatrix}
+1 \\ 
+0 \\ 
+\vdots \\ 
+0 \\ 
+\end{bmatrix}, \,
+e(2) = \begin{bmatrix}
+0 \\ 
+1 \\ 
+\vdots \\ 
+0 \\ 
+\end{bmatrix},
+\,\, (\ldots) \,\,,
+e(n) = \begin{bmatrix}
+0 \\ 
+0 \\ 
+\vdots \\ 
+n \\ 
+\end{bmatrix}
+\end{equation*}
+
+Now an arbitrary vector $v \in R^n$ is expressible in terms of these
+elementary vectors since:
+
+\begin{equation*}
+v = v_1 \times e(1) + v_2 \times e(2) + \dots + v_n \times e(n)
+\end{equation*}
 
