--- a/20211108165331-kubernetes_secrets.org
+++ b/20211108165331-kubernetes_secrets.org
@@ -4,10 +4,10 @@
 #+title: Kubernetes-Secrets
 
 #+BEGIN_QUOTE
-A Secret is an object that contains a small amount of sensitive data such as a
-password, a token, or a key. Such information might otherwise be put in a Pod
-specification or in a container image. Using a Secret means that you don't need
-to include confidential data in your application code.
+A [[id:dd924a84-7d6f-41ec-98c2-aa16582c0d89][Kubernetes]] Secret is an object that contains a small amount of sensitive data
+such as a password, a token, or a key. Such information might otherwise be put
+in a Pod specification or in a container image. Using a Secret means that you
+don't need to include confidential data in your application code.
 #+END_QUOTE
 
 * YAML
