--- a/20211208202505-kubernetes_ingress.org
+++ b/20211208202505-kubernetes_ingress.org
@@ -5,5 +5,5 @@
 
 * What is an Ingress Controller?
 
-+ Opens the cluster to receive traffic from the external world
++ Opens the [[id:dd924a84-7d6f-41ec-98c2-aa16582c0d89][Kubernetes]] cluster to receive traffic from the external world
 + Routes traffic to the backend services
