--- a/README.org
+++ b/README.org
@@ -1,2 +1,3 @@
 * Organon
-#+html: <a href="https://github.com/mtrsk/mtrsk.github.io/actions/workflows/docker-emacs.yml/badge.svg"> <img alt="pipeline status" src="https://github.com/mtrsk/mtrsk.github.io/actions/workflows/docker-emacs.yml/badge.svg" /></a>
+#+html: <a href="https://github.com/mtrsk/Organon/actions/workflows/docker-emacs.yml/badge.svg"> <img alt="pipeline status" src="https://github.com/mtrsk/Organon/actions/workflows/docker-emacs.yml/badge.svg" /></a>
+
